# c9s_idea_foundry

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEX.md  Dockerfile  README.md  cloudrun-service.yaml  openapi.json  pyproject.toml  report.md  slack_manifest.json  start_server.sh  start_server_watchdog.sh
.claude/: instructions.md
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  copilot-setup-steps.yml
.obsidian/: workspace.json
docs/: claude_token_management.md
docs/openapi/: openapi.json
knowledge/: agent_roles_and_workflow.txt  engineering_standards.txt  idea_refinement.txt  prd_guidelines.txt  project_architecture.txt  review_criteria.txt  user_preference.txt  ux_design_standards.txt
obsidian/: Home.md
obsidian/.obsidian/: workspace.json
obsidian/APIs/: API Overview.md  Health API.md  Ideas API.md  PRD Flow API.md  Projects API.md  Publishing API.md  SSO API.md  SSO Webhooks API.md  Slack API.md
obsidian/Agents/: Agent Roles.md  CEO Reviewer.md  Engagement Manager.md  Engineering Manager.md  Idea Agent.md  Idea Refiner.md  LLM Model Tiers.md  Orchestrator.md  Product Manager.md  QA Engineer.md  QA Lead.md  Requirements Breakdown.md  Staff Engineer.md  UX Designer.md
obsidian/Architecture/: Coding Standards.md  CrewAI Framework.md  Environment Variables.md  Module Map.md  Project Overview.md  Server Lifecycle.md
obsidian/Changelog/: 2026-07-20.md  Version History.md
obsidian/Database/: MongoDB Schema.md  agentInteraction Schema.md  crewJobs Schema.md  productRequirements Schema.md  projectConfig Schema.md  projectMemory Schema.md  slackOAuth Schema.md  userSession Schema.md  userSuggestions Schema.md  workingIdeas Schema.md
obsidian/Flows/: CEO Review Flow.md  Confluence Publishing Flow.md  Engineering Plan Flow.md  Executive Summary Flow.md  Finalization Flow.md  Idea Refinement Flow.md  Jira Ticketing Flow.md  PRD Flow.md  (+3 more)
scripts/: _deprecate_old_apis.py  audit_knowledge_sharing.py  check_jira_data.py  cleanup_orphan_projects.py  clear_stale_confluence_urls.py  dedup_working_ideas.py  dev_setup.sh  migrate_add_tenant_fields.py  migrate_credentials.py  migrate_output_dirs.py  migrate_slack_tenant.py  migrate_to_atlas.py  profile_imports.py  retry_jira_skeleton.py  sso_bootstrap.sh
tests/: conftest.py  test_cleanup_orphan_projects.py  test_cli_memory.py  test_confluence_xhtml.py  test_content_extractor.py  test_crewai_bus_fix.py  test_field_encryption.py  test_gcs_paths.py  test_github_kb_commit.py  test_jira_reconciliation.py  test_knowledge_context.py  test_knowledge_sources.py  test_logging_config.py  test_main.py  test_memory_loader.py  test_ngrok_tunnel.py  test_parse_json_output.py  test_preflight.py  test_project_knowledge.py  test_rbac_middleware.py  test_retry.py  test_setup_mongodb.py  test_slack_config.py  test_tenant_isolation.py  test_tenant_isolation_repos.py  test_version.py  test_websocket_auth.py
(+847 files in other folders)
