[project]
name = "crewai_productfeature_planner"
version = "0.1.6"
description = "crewai_productfeature_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
    "certifi>=2023.7.22",
    "pymongo==4.7.2",
    "motor>=3.3,<3.6",
    "pyngrok>=7.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "markdown>=3.5",
    "httpx>=0.27",
    "slack_sdk>=3.27",
    "playwright>=1.40",
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.14"]

[project.scripts]
crewai_productfeature_planner = "crewai_productfeature_planner.main:run"
run_crew = "crewai_productfeature_planner.main:run"
run_prd_flow = "crewai_productfeature_planner.main:run_prd_flow"
start_api = "crewai_productfeature_planner.main:start_api"
preflight = "crewai_productfeature_planner.scripts.preflight:run_checks"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
]

[tool.uv]
constraint-dependencies = [
    "onnxruntime==1.17.3; sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_productfeature_planner"]

[tool.crewai]
type = "crew"
